# localcurl

./: LICENSE  README.md  pyproject.toml
src/localcurl/: __init__.py  cli.py  parsers.py
tests/: test_cli.py  test_parsers.py
