[project]
name = "localcurl"
version = "0.1.0"
description = "Replay remote curl requests locally"
readme = "README.md"
authors = [
    { name = "Sylvain Gable"}
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "uncurl>=0.0.11",
]

[project.scripts]
localcurl = "localcurl:cli.main"
lc = "localcurl:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
